testsuite/tests/parser/should_fail/T19923c.hs
{-# OPTIONS_GHC TemplateHaskell, #-}
module ShouldFail where
